fix container alignment in page to center

--- a/style.css
+++ b/style.css
@@ -73,8 +73,8 @@ Color Palette
   position: fixed;
   top: 50%;
   left: 50%;
-  margin-top: -200px;
-  margin-left: -200px;
+  margin-top: -225px;
+  margin-left: -225px;
   background-color: #283149;
   border-radius: 5px;
   padding: 10px 30px 10px 30px;
